@@ -63,6 +63,7 @@ COM_MENUS_ITEM_FIELD_ORDERING_DESC="The menu item will be placed in the menu aft
 COM_MENUS_ITEM_FIELD_ORDERING_LABEL="Ordering"
 COM_MENUS_ITEM_FIELD_ORDERING_TEXT="Ordering will be available after saving"
 COM_MENUS_ITEM_FIELD_ORDERING_VALUE_FIRST="- First -"
+COM_MENUS_ITEM_FIELD_ORDERING_VALUE_LAST="- Last -"
 COM_MENUS_ITEM_FIELD_PAGE_CLASS_DESC="Optional CSS class to add to elements in this page. This allows CSS styling specific to this page."
 COM_MENUS_ITEM_FIELD_PAGE_CLASS_LABEL="Page Class"
 COM_MENUS_ITEM_FIELD_PAGE_HEADING_DESC="Optional alternative text for the Page heading."
